# bridge-ai

./: Cargo.toml  build.rs
src/: lib.rs  tests.rs
src/ai/: alpha_mu.rs  dds.rs  dds_bindings.rs  mod.rs
src/game_model/: bidding.rs  cards.rs  mod.rs  play.rs
src/interface/: control.rs  messages.rs  mod.rs  view.rs
