[package]
name = "bridge-ai"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
enum-map = "2.1.0"
itertools = "0.10.3"
cursive = "0.17.0"
tui = "0.17.0"
rand = "0.8.5"
strum = { version = "0.24.0", features = ["derive"] }
